--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
