--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "file-loader": "^6.2.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "url-loader": "^4.1.1"
   }
 }
